# HRL_DRL_gas_seep_detection

./: .gitignore  README.md  __init__.py  all_files.txt  job.sh  pyproject.toml  setup.py
HUGIN_gym/: __init__.py
HUGIN_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
HUGIN_gym/agents/: options.py
HUGIN_gym/agents/feature_extractor/: CoverageCNN.py  agent0_HRL.py  agent1_space_explore.py  agent2_plume_explore.py  agent3_border_explore.py
HUGIN_gym/agents/term_fn/: termination_fn_agent1.py  termination_fn_agent2.py
HUGIN_gym/assets/: AUV2.dae  AUV_base.blend
HUGIN_gym/callbacks/: CustomWandbCallback.py  EpisodeStatsCallback.py
HUGIN_gym/envs/: HRL_env.py  HUGIN_env.py  OLD_HUGIN_env.py  __init__.py
HUGIN_gym/envs/core/: dynamics.py
HUGIN_gym/envs/wrappers/: DynamicEpisodeLengthWrapper.py  FilterObservationWrapper.py  GPWrapper.py  continuous_wrapper.py
HUGIN_gym/evaluation/: _3D_lawnmower.py  comparison_RL_algs.py  comparison_obs_design.py  confusion_matrix_performance.py  lawnmower_path_generator.py  rollout.py  test_DDQN_(dynamic)_GP_wrapper_test.py  test_HRL(ddqn).py  test_HRL(ppo).py  test_PPO.py  test_SAC.py  train_vis_updated.py  training_data_visualiser.py  training_visualiser.py
HUGIN_gym/overlay/: overlay_server.py
HUGIN_gym/training/: train_DDQN.py  train_HRL(ddqn).py  train_HRL(ppo).py  train_PPO.py  train_SAC.py
HUGIN_gym/utils/: build_train_config.py  io.py  load_reward_function.py
examples/GP_model/: spatial_GP.py
examples/search_algorithms/: A_star.py  A_star_parallised.py  DFS.py
(+10 files in other folders)
